src/objects/FTE_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tag Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>FTE Tags</relationshipLabel>
        <relationshipName>FTE_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FTE_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FTE Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>FTE Tags (FTE Contract)</relationshipLabel>
        <relationshipName>FTE_Tags1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TC Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>FTE Tags</relationshipLabel>
        <relationshipName>FTE_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FTE Tag</label>
    <nameField>
        <label>FTE Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FTE Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>